added img, html, css

--- a/index.html
+++ b/index.html
@@ -15,16 +15,128 @@
         <div class="menu">
             <div class="ava">
                 <img id="ava" src="./img/ava.png" alt="">
-                <p class="text">¡Hola, Yuxin!</p>
-                <p>#TIENDA</p>
-                <ul>
-                    <li>Juguetes</li>
-                    <li>Salud</li>
-                    <li>Comida</li>
-                </ul>
+                <p class="title-text">¡Hola, Yuxin!</p>
+            </div>
+            <div class="list-menu">     
+                <p class="info-text org">#TIENDA</p>
+                <div class="choice">
+                    <div class="icon">
+                        <img class="img-icon" src="./img/Vector.png" alt="">
+                    </div>
+                    <p class="info-text gr">Juguetes</p>
+                </div>
+                <div class="choice">
+                    <div class="icon">
+                        <img class="img-icon" src="./img/Vector-1.png" alt="">
+                    </div>
+                    <p class="info-text gr">Salud</p>
+                </div>
+                <div class="choice">
+                    <div class="icon">
+                        <img class="img-icon" src="./img/Vector-2.png" alt="">
+                    </div>
+                    <p class="info-text gr">Comida</p>
+                </div>
+            </div>
+            <div class="list-menu"></div>
+                <p class="info-text org">#PERSONAL</p>
+                <div class="choice">
+                    <div class="icon">
+                        <img class="img-icon" src="./img/Vector-3.png" alt="">
+                    </div>
+                    <p class="info-text gr">Mi Carrito</p>
+                </div>
+                <div class="choice">
+                    <div class="icon">
+                        <img class="img-icon" src="./img/Vector-4.png" alt="">
+                    </div>
+                    <p class="info-text gr">Cupones</p>
+                </div>
+            
+                <div class="info-event">
+                    <img src="./img/🎉.png" alt="">
+                    <p class="info-text">Únete al club</p>
+                    <p class="small-text">y obtén cupones de manera diaria.</p>
+                    <button class="button">Actualizar Plan</button>
+                </div>
+            
+        </div>
+        <div class="card">
+            <div class="header">
+                <div class="input">
+                    <img class="img-icon2" src="./img/12.png" alt="">
+                    <input class="info-text gr" type="text" placeholder="Buscar...">
+                </div>
+                <img src="./img/13.png" alt="">
+            </div>
+            <div class="nav">
+                <h2 class="title-text">Juguetes</h2>
+                <div class="nav-list"> 
+                    <div class="nav-left">
+                        <p class="small-text gr border-text">Juguetes Pequeños</p>
+                        <p class="small-text gr border-text">Juguetes Grandes</p>
+                        <p class="small-text gr border-text">Juguetes Cognitivos</p>   
+                    </div>
+                    <div class="nav-right">
+                        <p class="small-text icon-mini"><u>VER MÁS</u> </p>
+                    </div>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="cards-line">
+                    <div class="card-info mr-26">
+                        <img src="./img/Foto del producto.png" alt="">
+                        <div class="pad-5">
+                            <p class="title-text ">El Batipato de <br> 
+                                Batman</p> 
+                            <span class="small-text gr star">(67)</span>
+                            <div class="price-button">
+                                <p class="price">$14.81</p>
+                                <button class="icon-plus">Añadir al Carrito</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-info">
+                        <img src="./img/Foto del producto2.png" alt="">
+                        <div class="pad-5">
+                            <p class="title-text ">Batimovil lego de <br>
+                                 Batman</p> 
+                            <span class="small-text gr star">(67)</span>
+                            <div class="price-button">
+                                <p class="price">$12.33</p>
+                                <button class="icon-plus">Añadir al Carrito</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="cards-line">
+                    <div class="card-info mr-26">
+                        <img src="./img/Foto del producto3.png" alt="">
+                        <div class="pad-5">
+                            <p class="title-text ">Minion criminal de <br> 
+                                15cm</p> 
+                            <span class="small-text gr star">(67)</span>
+                            <div class="price-button">
+                                <p class="price">$10.21</p>
+                                <button class="icon-plus">Añadir al Carrito</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-info">
+                        <img src="./img/Foto del producto(1).png" alt="">
+                        <div class="pad-5">
+                            <p class="title-text ">Oso de Peluche <br>
+                                 marrón</p> 
+                            <span class="small-text gr star">(67)</span>
+                            <div class="price-button">
+                                <p class="price">$8.23</p>
+                                <button class="icon-plus">Añadir al Carrito</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="card"></div>
         <div class="info"></div>
     </div>
 </body>
