new block html img

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="box">
         <div class="menu">
             <div class="ava">
-                <img id="ava" src="./img/ava.png" alt="">
+                <img id="ava" src="./img/ava1.jpg" alt="">
                 <p class="title-text">¡Hola, Yuxin!</p>
             </div>
             <div class="list-menu">     
@@ -38,7 +38,7 @@
                     <p class="info-text gr">Comida</p>
                 </div>
             </div>
-            <div class="list-menu"></div>
+            <div class="list-menu">
                 <p class="info-text org">#PERSONAL</p>
                 <div class="choice">
                     <div class="icon">
@@ -52,13 +52,13 @@
                     </div>
                     <p class="info-text gr">Cupones</p>
                 </div>
-            
-                <div class="info-event">
-                    <img src="./img/🎉.png" alt="">
-                    <p class="info-text">Únete al club</p>
-                    <p class="small-text">y obtén cupones de manera diaria.</p>
-                    <button class="button">Actualizar Plan</button>
-                </div>
+            </div>
+            <div class="info-event">
+                <img src="./img/🎉.png" alt="">
+                <p class="info-text">Únete al club</p>
+                <p class="small-text">y obtén cupones de manera diaria.</p>
+                <button class="button">Actualizar Plan</button>
+            </div>
             
         </div>
         <div class="card">
@@ -84,8 +84,8 @@
             </div>
             <div class="cards">
                 <div class="cards-line">
-                    <div class="card-info mr-26">
-                        <img src="./img/Foto del producto.png" alt="">
+                    <div class="card-info ">
+                        <img class="pic" src="./img/pic1.jpg" alt="">
                         <div class="pad-5">
                             <p class="title-text ">El Batipato de <br> 
                                 Batman</p> 
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                     <div class="card-info">
-                        <img src="./img/Foto del producto2.png" alt="">
+                        <img class="pic" src="./img/pic2.jpg" alt="">
                         <div class="pad-5">
                             <p class="title-text ">Batimovil lego de <br>
                                  Batman</p> 
@@ -110,8 +110,8 @@
                     </div>
                 </div>
                 <div class="cards-line">
-                    <div class="card-info mr-26">
-                        <img src="./img/Foto del producto3.png" alt="">
+                    <div class="card-info ">
+                        <img class="pic" src="./img/pic3.jpg" alt="">
                         <div class="pad-5">
                             <p class="title-text ">Minion criminal de <br> 
                                 15cm</p> 
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                     <div class="card-info">
-                        <img src="./img/Foto del producto(1).png" alt="">
+                        <img class="pic" src="./img/pic4.jpg" alt="">
                         <div class="pad-5">
                             <p class="title-text ">Oso de Peluche <br>
                                  marrón</p> 
@@ -137,7 +137,31 @@
                 </div>
             </div>
         </div>
-        <div class="info"></div>
+        <div class="info">
+            <h3 class="title-text">Información del Juguete</h3>
+            <div class="card-info-big">
+                <img class="pic-big" src="./img/pic1.jpg" alt="">
+                <div class="pad-5">
+                    <p class="title-text ">El Batipato de Batman</p> 
+                    <p class="small-text not-text-align">Patito de hule que usa batman para acompañar <br>
+                        sus seciones de baño.</p>
+                    <span class="small-text gr star">(67)   <u>Ver todas las opiniones</u> </span>
+                    <p class="price">$14.81</p>
+                    <button class="icon-plus">Añadir al Carrito</button>
+                </div>
+                <div class=" pad-5">
+                    <h3 class="title-text">Algunas opiniones sobre este juguete</h3>
+                    <div class="account">
+                        <p class="info-text icon-ava mr-0">Arlene McCoy</p>
+                        <p class="small-text gr not-text-align mrt-5">Amet minim mollit non.</p>
+                    </div>
+                    <div class="account">
+                        <p class="info-text icon-ava1 mr-0">Devon Lane</p>
+                        <p class="small-text gr not-text-align mrt-5">Amet minim mollit non. yusporto rewins.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
