--- a/index.html
+++ b/index.html
@@ -14,57 +14,59 @@
     <div class="box">
         <div class="menu">
             <div class="ava">
-                <img id="ava" src="./img/ava.png" alt="">
-                <p class="title-text">¡Hola, Yuxin!</p>
+                <img id="ava" src="./img/89-18.jpg" alt="">
+                <p class="title-text">¡Hola!</p>
             </div>
-            <div class="list-menu">     
-                <p class="info-text org">#TIENDA</p>
-                <div class="choice">
-                    <div class="icon">
-                        <img class="img-icon" src="./img/Vector.png" alt="">
+            <div class="list-menu">
+                <div class="list-menu-side">     
+                    <p class="info-text org">#TIENDA</p>
+                    <div class="choice">
+                        <div class="icon">
+                            <img class="img-icon" src="./img/Vector.png" alt="">
+                        </div>
+                        <p class="info-text gr">Сosméticos</p>
                     </div>
-                    <p class="info-text gr">Juguetes</p>
-                </div>
-                <div class="choice">
-                    <div class="icon">
-                        <img class="img-icon" src="./img/Vector-1.png" alt="">
+                    <div class="choice">
+                        <div class="icon">
+                            <img class="img-icon" src="./img/Vector-1.png" alt="">
+                        </div>
+                        <p class="info-text gr">Salud</p>
                     </div>
-                    <p class="info-text gr">Salud</p>
-                </div>
-                <div class="choice">
-                    <div class="icon">
-                        <img class="img-icon" src="./img/Vector-2.png" alt="">
+                    <div class="choice">
+                        <div class="icon">
+                            <img class="img-icon" src="./img/Vector-2.png" alt="">
+                        </div>
+                        <p class="info-text gr">Comida</p>
                     </div>
-                    <p class="info-text gr">Comida</p>
                 </div>
+                <div class="list-menu-side">
+                    <p class="info-text org">#PERSONAL</p>
+                    <div class="choice">
+                        <div class="icon">
+                            <img class="img-icon" src="./img/Vector-3.png" alt="">
+                        </div>
+                        <p class="info-text gr">Сesta</p>
+                    </div>
+                    <div class="choice">
+                        <div class="icon">
+                            <img class="img-icon" src="./img/Vector-4.png" alt="">
+                        </div>
+                        <p class="info-text gr">Cupones</p>
+                    </div>
+                </div>
+            </div>    
+            <div class="info-event">
+                <img src="./img/🎉.png" alt="">
+                <p class="info-text">Únete al club</p>
+                <p class="small-text">y obtén cupones de manera diaria.</p>
+                <button class="button">Actualizar Plan</button>
             </div>
-            <div class="list-menu"></div>
-                <p class="info-text org">#PERSONAL</p>
-                <div class="choice">
-                    <div class="icon">
-                        <img class="img-icon" src="./img/Vector-3.png" alt="">
-                    </div>
-                    <p class="info-text gr">Mi Carrito</p>
-                </div>
-                <div class="choice">
-                    <div class="icon">
-                        <img class="img-icon" src="./img/Vector-4.png" alt="">
-                    </div>
-                    <p class="info-text gr">Cupones</p>
-                </div>
-            
-                <div class="info-event">
-                    <img src="./img/🎉.png" alt="">
-                    <p class="info-text">Únete al club</p>
-                    <p class="small-text">y obtén cupones de manera diaria.</p>
-                    <button class="button">Actualizar Plan</button>
-                </div>
             
         </div>
         <div class="card">
             <div class="header">
                 <div class="input">
-                    <img class="img-icon2" src="./img/12.png" alt="">
+                    <img class="img-icon2" src="./img/index.png" alt="">
                     <input class="info-text gr" type="text" placeholder="Buscar...">
                 </div>
                 <img src="./img/13.png" alt="">
@@ -73,9 +75,9 @@
                 <h2 class="title-text">Juguetes</h2>
                 <div class="nav-list"> 
                     <div class="nav-left">
-                        <p class="small-text gr border-text">Juguetes Pequeños</p>
-                        <p class="small-text gr border-text">Juguetes Grandes</p>
-                        <p class="small-text gr border-text">Juguetes Cognitivos</p>   
+                        <p class="small-text gr border-text">Crema Tonificante</p>
+                        <p class="small-text gr border-text">Protector Solar</p>
+                        <p class="small-text gr border-text">Brillo De Labios</p>   
                     </div>
                     <div class="nav-right">
                         <p class="small-text icon-mini"><u>VER MÁS</u> </p>
@@ -84,60 +86,89 @@
             </div>
             <div class="cards">
                 <div class="cards-line">
-                    <div class="card-info mr-26">
-                        <img src="./img/Foto del producto.png" alt="">
+                    <div class="card-info mr-15">
+                        <img class="pic" src="./img/new222.jpg" alt="">
                         <div class="pad-5">
-                            <p class="title-text ">El Batipato de <br> 
-                                Batman</p> 
-                            <span class="small-text gr star">(67)</span>
+                            <p class="title-text ">Juego de cepillos <br>
+                            ZOREYA</p> 
+                            <span class="small-text gr star">(87)</span>
                             <div class="price-button">
-                                <p class="price">$14.81</p>
-                                <button class="icon-plus">Añadir al Carrito</button>
+                                <p class="price">$45.99</p>
+                                <button class="icon-plus info-text">Añadir al Carrito</button>
                             </div>
                         </div>
                     </div>
                     <div class="card-info">
-                        <img src="./img/Foto del producto2.png" alt="">
+                        <img class="pic" src="./img/new1.jpg" alt="">
                         <div class="pad-5">
-                            <p class="title-text ">Batimovil lego de <br>
-                                 Batman</p> 
-                            <span class="small-text gr star">(67)</span>
+                            <p class="title-text ">Pintalabios para mujer<br>
+                                ESTÉE LAUDER</p> 
+                            <span class="small-text gr star">(56)</span>
                             <div class="price-button">
-                                <p class="price">$12.33</p>
-                                <button class="icon-plus">Añadir al Carrito</button>
+                                <p class="price">$35.87</p>
+                                <button class="icon-plus info-text">Añadir al Carrito</button>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="cards-line">
-                    <div class="card-info mr-26">
-                        <img src="./img/Foto del producto3.png" alt="">
+                    <div class="card-info mr-15">
+                        <img class="pic" src="./img/new44.jpg" alt="">
                         <div class="pad-5">
-                            <p class="title-text ">Minion criminal de <br> 
-                                15cm</p> 
-                            <span class="small-text gr star">(67)</span>
+                            <p class="title-text">Кubor rosa suave<br> 
+                                ZOREYA</p> 
+                            <span class="small-text gr star">(71)</span>
                             <div class="price-button">
-                                <p class="price">$10.21</p>
-                                <button class="icon-plus">Añadir al Carrito</button>
+                                <p class="price">$20.17</p>
+                                <button class="icon-plus info-text">Añadir al Carrito</button>
                             </div>
                         </div>
                     </div>
                     <div class="card-info">
-                        <img src="./img/Foto del producto(1).png" alt="">
+                        <img class="pic" src="./img/pic44.jpg" alt="">
                         <div class="pad-5">
-                            <p class="title-text ">Oso de Peluche <br>
-                                 marrón</p> 
-                            <span class="small-text gr star">(67)</span>
+                            <p class="title-text ">Brillo de labios<br>
+                                SHIK</p> 
+                            <span class="small-text gr star">(101)</span>
                             <div class="price-button">
-                                <p class="price">$8.23</p>
-                                <button class="icon-plus">Añadir al Carrito</button>
+                                <p class="price">$15.66</p>
+                                <button class="icon-plus info-text">Añadir al Carrito</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="info"></div>
+        <div class="info">
+            <h3 class="title-text">Información del Juguete</h3>
+            <div class="card-info-big">
+                <img class="pic-big" src="./img/new22.jpg" alt="">
+                <div class="pad-5">
+                    <p class="title-text ">El Batipato de Batman</p> 
+                    <p class="small-text not-text-align">Set de 10 brochas de maquillaje / brochas de maquillaje profesional </p>
+                    <span class="small-text gr star">(87)   <u>Ver todas las opiniones</u> </span>
+                    <p class="price">$45.99</p>
+                    <button class="icon-plus">Añadir al Carrito</button>
+                </div>
+                <div class=" pad-5">
+                    <h3 class="title-text">Algunas opiniones sobre este cosmético</h3>
+                    <div class="account">
+                        <img class="account-icon" src="./img/8.jpg" alt="">
+                        <div class="info-tx">
+                            <p class="info-text icon-ava mr-0">García Carlos</p>
+                            <p class="small-text gr not-text-align mrt-5">Сosmetólogo.</p>
+                        </div>
+                    </div>
+                    <div class="account">
+                        <img class="account-icon" src="./img/ava.jpg" alt="">
+                        <div class="info-tx">
+                            <p class="info-text icon-ava1 mr-0">María Luis</p>
+                            <p class="small-text gr not-text-align mrt-5">Dermatólogo.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
