--- a/index.html
+++ b/index.html
@@ -12,15 +12,10 @@
 </head>
 <body>
     <div class="box">
-        <div class="menu">
+        <div class="menu ">
             <div class="ava">
-<<<<<<< HEAD
                 <img id="ava" src="./img/89-18.jpg" alt="">
                 <p class="title-text">¡Hola!</p>
-=======
-                <img id="ava" src="./img/ava1.jpg" alt="">
-                <p class="title-text">¡Hola, Yuxin!</p>
->>>>>>> 79861ebee13d981e7222acd6b2517106b249be43
             </div>
             <div class="list-menu">
                 <div class="list-menu-side">     
@@ -66,31 +61,7 @@
                 <p class="small-text">y obtén cupones de manera diaria.</p>
                 <button class="button">Actualizar Plan</button>
             </div>
-<<<<<<< HEAD
-=======
-            <div class="list-menu">
-                <p class="info-text org">#PERSONAL</p>
-                <div class="choice">
-                    <div class="icon">
-                        <img class="img-icon" src="./img/Vector-3.png" alt="">
-                    </div>
-                    <p class="info-text gr">Mi Carrito</p>
-                </div>
-                <div class="choice">
-                    <div class="icon">
-                        <img class="img-icon" src="./img/Vector-4.png" alt="">
-                    </div>
-                    <p class="info-text gr">Cupones</p>
-                </div>
-            </div>
-            <div class="info-event">
-                <img src="./img/🎉.png" alt="">
-                <p class="info-text">Únete al club</p>
-                <p class="small-text">y obtén cupones de manera diaria.</p>
-                <button class="button">Actualizar Plan</button>
-            </div>
->>>>>>> 79861ebee13d981e7222acd6b2517106b249be43
-            
+ 
         </div>
         <div class="card">
             <div class="header">
@@ -115,13 +86,9 @@
             </div>
             <div class="cards">
                 <div class="cards-line">
-<<<<<<< HEAD
                     <div class="card-info mr-15">
                         <img class="pic" src="./img/new222.jpg" alt="">
-=======
-                    <div class="card-info ">
-                        <img class="pic" src="./img/pic1.jpg" alt="">
->>>>>>> 79861ebee13d981e7222acd6b2517106b249be43
+
                         <div class="pad-5">
                             <p class="title-text ">Juego de cepillos <br>
                             ZOREYA</p> 
@@ -133,11 +100,9 @@
                         </div>
                     </div>
                     <div class="card-info">
-<<<<<<< HEAD
+
                         <img class="pic" src="./img/new1.jpg" alt="">
-=======
-                        <img class="pic" src="./img/pic2.jpg" alt="">
->>>>>>> 79861ebee13d981e7222acd6b2517106b249be43
+
                         <div class="pad-5">
                             <p class="title-text ">Pintalabios para mujer<br>
                                 ESTÉE LAUDER</p> 
@@ -150,13 +115,10 @@
                     </div>
                 </div>
                 <div class="cards-line">
-<<<<<<< HEAD
+
                     <div class="card-info mr-15">
                         <img class="pic" src="./img/new44.jpg" alt="">
-=======
-                    <div class="card-info ">
-                        <img class="pic" src="./img/pic3.jpg" alt="">
->>>>>>> 79861ebee13d981e7222acd6b2517106b249be43
+
                         <div class="pad-5">
                             <p class="title-text">Кubor rosa suave<br> 
                                 ZOREYA</p> 
@@ -168,11 +130,10 @@
                         </div>
                     </div>
                     <div class="card-info">
-<<<<<<< HEAD
+
                         <img class="pic" src="./img/pic44.jpg" alt="">
-=======
-                        <img class="pic" src="./img/pic4.jpg" alt="">
->>>>>>> 79861ebee13d981e7222acd6b2517106b249be43
+
+
                         <div class="pad-5">
                             <p class="title-text ">Brillo de labios<br>
                                 SHIK</p> 
@@ -189,10 +150,10 @@
         <div class="info">
             <h3 class="title-text">Información del Juguete</h3>
             <div class="card-info-big">
-<<<<<<< HEAD
+
                 <img class="pic-big" src="./img/new22.jpg" alt="">
                 <div class="pad-5">
-                    <p class="title-text ">El Batipato de Batman</p> 
+                    <p class="title-text ">Juego de cepillos ZOREYA</p> 
                     <p class="small-text not-text-align">Set de 10 brochas de maquillaje / brochas de maquillaje profesional </p>
                     <span class="small-text gr star">(87)   <u>Ver todas las opiniones</u> </span>
                     <p class="price">$45.99</p>
@@ -212,27 +173,8 @@
                         <div class="info-tx">
                             <p class="info-text icon-ava1 mr-0">María Luis</p>
                             <p class="small-text gr not-text-align mrt-5">Dermatólogo.</p>
-                        </div>
-=======
-                <img class="pic-big" src="./img/pic1.jpg" alt="">
-                <div class="pad-5">
-                    <p class="title-text ">El Batipato de Batman</p> 
-                    <p class="small-text not-text-align">Patito de hule que usa batman para acompañar <br>
-                        sus seciones de baño.</p>
-                    <span class="small-text gr star">(67)   <u>Ver todas las opiniones</u> </span>
-                    <p class="price">$14.81</p>
-                    <button class="icon-plus">Añadir al Carrito</button>
-                </div>
-                <div class=" pad-5">
-                    <h3 class="title-text">Algunas opiniones sobre este juguete</h3>
-                    <div class="account">
-                        <p class="info-text icon-ava mr-0">Arlene McCoy</p>
-                        <p class="small-text gr not-text-align mrt-5">Amet minim mollit non.</p>
-                    </div>
-                    <div class="account">
-                        <p class="info-text icon-ava1 mr-0">Devon Lane</p>
-                        <p class="small-text gr not-text-align mrt-5">Amet minim mollit non. yusporto rewins.</p>
->>>>>>> 79861ebee13d981e7222acd6b2517106b249be43
+                         </div>
+
                     </div>
                 </div>
             </div>
